feat: add editable annotated wiki images
