# server/api/wiki-pages/[pageId]/images.get.ts
@@ -1,0 +1,7 @@
+import { getRouterParam } from 'h3';
+import { requireUser } from '../../../lib/security/auth';
+import { listWikiImages } from '../../../lib/wiki-images';
+
+export default defineEventHandler((event) => ({
+  images: listWikiImages(getRouterParam(event, 'pageId')!, requireUser(event)),
+}));
